Fixes mobile alignment for details

--- a/src/main.css
+++ b/src/main.css
@@ -33,6 +33,8 @@ body {
   display: flex;
   width: 100%;
   justify-content: space-between;
+  align-content: stretch;
+  align-items: flex-end;
 }
 
 .the-details i {
